# NeedADrop

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  LOGGING.md  README.md  SECURITY.md  SECURITY_AUDIT.md  docker-compose.yml
.github/workflows/: pipeline.yaml  pr-checks.yaml  release-please.yaml  tagged-image-build.yaml  weekly-audit.yaml
src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs  templates.rs
templates/: index.html  login.html  upload.html
templates/admin/: change_password.html  create_link.html  dashboard.html  links.html  uploads.html
