[package]
name = "needadrop"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
rusqlite = { version = "0.37", features = ["chrono", "bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
mime = "0.3"
tempfile = "3.0"
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
askama = "0.14"
bytes = "1.0"
futures = "0.3"
lazy_static = "1.4"
# Security fix: Force slab to use patched version
slab = "0.4.11"
